fix(widget): add overflow style to widget-content

--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -3,4 +3,7 @@
   @include flex-column();
   @include fill();
   margin-bottom: 1em;
+  .app-widget__content {
+    @include scroll();
+  }
 }
