--- a/src/theme/_mixins.scss
+++ b/src/theme/_mixins.scss
@@ -58,7 +58,7 @@
 @mixin no-round {
   border-radius: 0;
 }
-@mixin scrol {
+@mixin scroll {
   overflow: hidden;
   overflow-y: auto;
 }
